--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
         <h2 class="shb-section-heading-title">Portfolio</h2>
       </div>
       <div class="shb-header-logo contain-image flex-center">
-        <a href="index.html" class="line-height-0"><img src="./assets/images/logos/SHB_BRAND_LOGO.svg" class="header-logo-image" alt="brand-logo" /></a>
+        <a href="index.html" class="line-height-0"><img src="./assets/images/logos/SHB_BRAND_LOGO_BLAK.svg" class="header-logo-image" alt="brand-logo" /></a>
       </div>
 
       <div class="shb-expandable-container">
@@ -105,94 +105,95 @@
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 0</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 1</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
-                <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
-                <div class="shb-project-title-wrap">
+                <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_03">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 2</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
-                <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
-                <div class="shb-project-title-wrap">
+                <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_01">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 3</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 0</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
-                <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
-                <div class="shb-project-title-wrap">
+                <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg " alt="SHB_PORTFOLIO_03">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 4</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 5</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 6</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
-                <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
-                <div class="shb-project-title-wrap">
+                <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_03">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 7</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
-                <div class="shb-project-title-wrap">
+                <!-- <div class="shb-project-title-wrap">
                   <h4>Project 8</h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
           </div>
+          <h2 class="shb-expandable-item-name">Project 01</h2>
         </div>
       </div>
 
@@ -299,6 +300,22 @@
   <script src="assets/scripts/production-icon.js"></script>
   <script src="assets/scripts/production-script.js"></script>
   <!-- // _CLOSE >> REQUIRED SCRIPTS << SHB // -->
+  <script>
+
+$(".shb-expandable-card-item").hover(
+  function () {
+    $(".shb-expandable-item-name").addClass("show_text_hover");
+  },
+  function () {
+    $(".shb-expandable-item-name").removeClass("show_text_hover");
+  }
+);
+      // $(".shb-expandable-item-name").css("background-color", "yellow");
+      // }, function(){
+      // $(this).css("background-color", "pink");
+    // })
+// });
+  </script>
 </body>
 
 </html>
