--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
 
           <div class="shb-expandable-item-row">
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-0">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
                 <!-- <div class="shb-project-title-wrap">
@@ -111,7 +111,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-1">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
                 <!-- <div class="shb-project-title-wrap">
@@ -120,7 +120,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-2">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_03">
                 <!-- <div class="shb-project-title-wrap">
@@ -129,7 +129,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-3">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_01">
                 <!-- <div class="shb-project-title-wrap">
@@ -138,7 +138,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-4">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
                 <!-- <div class="shb-project-title-wrap">
@@ -147,7 +147,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-5">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg " alt="SHB_PORTFOLIO_03">
                 <!-- <div class="shb-project-title-wrap">
@@ -156,7 +156,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-6">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
                 <!-- <div class="shb-project-title-wrap">
@@ -165,7 +165,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-7">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
                 <!-- <div class="shb-project-title-wrap">
@@ -174,7 +174,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-8">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_03">
                 <!-- <div class="shb-project-title-wrap">
@@ -183,7 +183,7 @@
               </div>
             </div>
 
-            <div class="shb-expandable-card-item flex-center">
+            <div class="shb-expandable-card-item flex-center shb-expandable-card-9">
               <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
                 <!-- <div class="shb-project-title-wrap">
