--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,10 @@
   
   <section class="shb-expandable-slider-wrapper">
     <a href="index.html" class="cursor-pointer shb-expandable-toggle-icon">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 3V5H3V3H12ZM16 19V21H3V19H16ZM22 11V13H3V11H22Z"></path></svg>
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 3V5H3V3H12ZM16 19V21H3V19H16ZM22 11V13H3V11H22Z"></path></svg> -->
+      <span class="bar0"></span>
+      <span class="bar1"></span>
+      <span class="bar2"></span>
     </a>
     <div class="container">
 
